# yt_dlp-addon

./: .dockerignore  .gitattributes  .gitignore  .yamllint  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION_CONTRACT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  repository.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml  ci.yaml  release.yaml
scripts/: validate_repository.py  validate_version.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_database.py  test_events.py  test_filenames.py  test_integration.py  test_media.py  test_queue.py  test_validation.py
youtube_audio_downloader/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  config.yaml
youtube_audio_downloader/rootfs/app/backend/youtube_audio/: __init__.py  api.py  config.py  database.py  errors.py  events.py  filenames.py  integration.py  main.py  media.py  models.py  queue.py  security.py  validation.py
youtube_audio_downloader/rootfs/app/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
youtube_audio_downloader/rootfs/app/frontend/src/: api.ts  app.test.ts  app.ts  i18n.test.ts  i18n.ts  main.ts  models.ts  validation.test.ts  validation.ts
youtube_audio_downloader/rootfs/etc/services.d/youtube-audio/: run
youtube_audio_downloader/translations/: en.yaml  pl.yaml
